# tantivy-in-rust-bugdemo

./: .gitignore  Cargo.toml  Readme.md  build._ignore_rs  libfailgosample.h  testgo.go  testpython.py
src/: lib.rs
testmusl/: testgo_musl.go
testmuslasync/: testgo_async.go
testnotmusl/: testgo_notmusl.go
