[package]
name = "failgosample"
version = "0.1.0"
authors = ["daniel <dnielm@gmail.com>"]
edition = "2021"

[dependencies]
tantivy = "0.16.1"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.10.0"

[lib]
name = "failgosample"
# crate-type = ["cdylib"] 
crate_type = ["staticlib"]